test_regress/t/t_covergroup_unsup.out
%Warning-COVERIGN: t/t_covergroup_unsup.v:65:25: Ignoring unsupported: coverage '@@' events
   65 |    covergroup cg_atat() @@ (begin funca or end funcb);
      |                         ^~
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Warning-COVERIGN: t/t_covergroup_unsup.v:109:24: Ignoring unsupported: coverage cross 'function' declaration
  109 |          function void crossfunc; endfunction
      |                        ^~~~~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:110:21: Ignoring unsupported: coverage select function call
  110 |          bins one = crossfunc();
      |                     ^~~~~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:137:33: Ignoring unsupported: covergroup value range
  137 |       { bins bts2 = ( 2, 3 ), ( [5:6] ), ( [5 +/- 2] ), ( [ 5 +%- 20.0] ) ; }
      |                                 ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:137:44: Ignoring unsupported: covergroup value range
  137 |       { bins bts2 = ( 2, 3 ), ( [5:6] ), ( [5 +/- 2] ), ( [ 5 +%- 20.0] ) ; }
      |                                            ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:137:59: Ignoring unsupported: covergroup value range
  137 |       { bins bts2 = ( 2, 3 ), ( [5:6] ), ( [5 +/- 2] ), ( [ 5 +%- 20.0] ) ; }
      |                                                           ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:139:27: Ignoring unsupported: cover trans set '=>'
  139 |       { bins bts2 = ( 1,5 => 6,7 ) ; }
      |                           ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:140:25: Ignoring unsupported: cover '[*'
  140 |       { bins bts2 = ( 3 [*5] ) ; }
      |                         ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:141:25: Ignoring unsupported: cover '[*'
  141 |       { bins bts2 = ( 3 [*5:6] ) ; }
      |                         ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:142:25: Ignoring unsupported: cover '[->'
  142 |       { bins bts2 = ( 3 [->5] ) ; }
      |                         ^~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:143:25: Ignoring unsupported: cover '[->'
  143 |       { bins bts2 = ( 3 [->5:6] ) ; }
      |                         ^~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:144:25: Ignoring unsupported: cover '[='
  144 |       { bins bts2 = ( 3 [=5] ) ; }
      |                         ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:145:25: Ignoring unsupported: cover '[='
  145 |       { bins bts2 = ( 3 [=5:6] ) ; }
      |                         ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:151:23: Ignoring unsupported: coverage select expression 'binsof'
  151 |          bins bin_a = binsof(a);
      |                       ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:152:24: Ignoring unsupported: coverage select expression 'binsof'
  152 |          bins bin_ai = binsof(a) iff (!rst);
      |                        ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:153:23: Ignoring unsupported: coverage select expression 'binsof'
  153 |          bins bin_c = binsof(cp.x);
      |                       ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:154:24: Ignoring unsupported: coverage select expression 'binsof'
  154 |          bins bin_na = ! binsof(a);
      |                        ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:156:33: Ignoring unsupported: coverage select expression 'intersect'
  156 |          bins bin_d = binsof(a) intersect { b };
      |                                 ^~~~~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:157:34: Ignoring unsupported: coverage select expression 'intersect'
  157 |          bins bin_nd = ! binsof(a) intersect { b };
      |                                  ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:159:23: Ignoring unsupported: coverage select expression with
  159 |          bins bin_e = with (a);
      |                       ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:160:27: Ignoring unsupported: coverage select expression with
  160 |          bins bin_not_e = ! with (a);
      |                           ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:162:26: Ignoring unsupported: coverage select expression 'binsof'
  162 |          bins bin_par = (binsof(a));
      |                          ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:163:25: Ignoring unsupported: coverage select expression 'binsof'
  163 |          bins bin_and = binsof(a) && binsof(b);
      |                         ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:163:38: Ignoring unsupported: coverage select expression 'binsof'
  163 |          bins bin_and = binsof(a) && binsof(b);
      |                                      ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:163:35: Ignoring unsupported: coverage select expression '&&'
  163 |          bins bin_and = binsof(a) && binsof(b);
      |                                   ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:164:24: Ignoring unsupported: coverage select expression 'binsof'
  164 |          bins bin_or = binsof(a) || binsof(b);
      |                        ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:164:37: Ignoring unsupported: coverage select expression 'binsof'
  164 |          bins bin_or = binsof(a) || binsof(b);
      |                                     ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:164:34: Ignoring unsupported: coverage select expression '||'
  164 |          bins bin_or = binsof(a) || binsof(b);
      |                                  ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:165:26: Ignoring unsupported: coverage select expression 'binsof'
  165 |          bins bin_with = binsof(a) with (a);
      |                          ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:165:36: Ignoring unsupported: coverage select expression with
  165 |          bins bin_with = binsof(a) with (a);
      |                                    ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:166:29: Ignoring unsupported: coverage select expression 'binsof'
  166 |          bins bin_or_with = binsof(a) || binsof(a) with (a);
      |                             ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:166:42: Ignoring unsupported: coverage select expression 'binsof'
  166 |          bins bin_or_with = binsof(a) || binsof(a) with (a);
      |                                          ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:166:52: Ignoring unsupported: coverage select expression with
  166 |          bins bin_or_with = binsof(a) || binsof(a) with (a);
      |                                                    ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:166:39: Ignoring unsupported: coverage select expression '||'
  166 |          bins bin_or_with = binsof(a) || binsof(a) with (a);
      |                                       ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:167:30: Ignoring unsupported: coverage select expression 'binsof'
  167 |          bins bin_and_with = binsof(a) && binsof(a) with (a);
      |                              ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:167:43: Ignoring unsupported: coverage select expression 'binsof'
  167 |          bins bin_and_with = binsof(a) && binsof(a) with (a);
      |                                           ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:167:53: Ignoring unsupported: coverage select expression with
  167 |          bins bin_and_with = binsof(a) && binsof(a) with (a);
      |                                                     ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:167:40: Ignoring unsupported: coverage select expression '&&'
  167 |          bins bin_and_with = binsof(a) && binsof(a) with (a);
      |                                        ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:168:37: Ignoring unsupported: coverage select expression 'binsof'
  168 |          bins bin_multiple_fields = binsof(p.inner_packet.field);
      |                                     ^~~~~~
%Warning-WIDTHTRUNC: t/t_covergroup_unsup.v:77:7: Logical operator COVERPOINT expects 1 bit on the iff condition, but iff condition's VARREF 'b' generates 32 bits.
                                                : ... note: In instance 't'
   77 |       coverpoint a iff (b);
      |       ^~~~~~~~~~
                     ... For warning description see https://verilator.org/warn/WIDTHTRUNC?v=latest
                     ... Use "/* verilator lint_off WIDTHTRUNC */" and lint_on around source to disable this message.
%Warning-WIDTHTRUNC: t/t_covergroup_unsup.v:80:11: Logical operator COVERPOINT 'id' expects 1 bit on the iff condition, but iff condition's VARREF 'b' generates 32 bits.
                                                 : ... note: In instance 't'
   80 |       id: coverpoint a iff (b);
      |           ^~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_covergroup_unsup.v:83:15: Logical operator COVERPOINT 'id' expects 1 bit on the iff condition, but iff condition's VARREF 'b' generates 32 bits.
                                                 : ... note: In instance 't'
   83 |       int id: coverpoint a iff (b);
      |               ^~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_covergroup_unsup.v:86:19: Logical operator COVERPOINT 'id' expects 1 bit on the iff condition, but iff condition's VARREF 'b' generates 32 bits.
                                                 : ... note: In instance 't'
   86 |       var int id: coverpoint a iff (b);
      |                   ^~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_covergroup_unsup.v:89:21: Logical operator COVERPOINT 'id' expects 1 bit on the iff condition, but iff condition's VARREF 'b' generates 32 bits.
                                                 : ... note: In instance 't'
   89 |       var [3:0] id: coverpoint a iff (b);
      |                     ^~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_covergroup_unsup.v:92:17: Logical operator COVERPOINT 'id' expects 1 bit on the iff condition, but iff condition's VARREF 'b' generates 32 bits.
                                                 : ... note: In instance 't'
   92 |       [3:0] id: coverpoint a iff (b);
      |                 ^~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_covergroup_unsup.v:95:18: Logical operator COVERPOINT 'id' expects 1 bit on the iff condition, but iff condition's VARREF 'b' generates 32 bits.
                                                 : ... note: In instance 't'
   95 |       signed id: coverpoint a iff (b);
      |                  ^~~~~~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:61:36: Covergroup clocking event parsed but automatic sampling not yet implemented; call sample() manually
                                               : ... note: In instance 't'
   61 |    covergroup cg_clockingevent() @(posedge clk);
      |                                    ^~~~~~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:99:7: Cross coverage references unknown coverpoint 'a'
                                               : ... note: In instance 't'
   99 |       cross a, b iff (!rst);
      |       ^~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:102:7: Cross coverage references unknown coverpoint 'a'
                                                : ... note: In instance 't'
  102 |       cross a, b iff (!rst) {}
      |       ^~~~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:105:7: Cross coverage references unknown coverpoint 'a'
                                                : ... note: In instance 't'
  105 |       cross a, b { option.comment = "cross"; option.weight = 12; }
      |       ^~~~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:108:7: Cross coverage references unknown coverpoint 'a'
                                                : ... note: In instance 't'
  108 |       cross a, b {
      |       ^~~~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:114:17: Cross coverage references unknown coverpoint 'a'
                                                 : ... note: In instance 't'
  114 |       my_cg_id: cross a, b iff (!rst);
      |                 ^~~~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:150:7: Cross coverage references unknown coverpoint 'a'
                                                : ... note: In instance 't'
  150 |       cross a, b {
      |       ^~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:179:24: Covergroup clocking event parsed but automatic sampling not yet implemented; call sample() manually
                                                : ... note: In instance 't'
  179 |       covergroup cov1 @m_z;
      |                        ^~~
%Error: Exiting due to
